@@ -6,20 +6,23 @@
 class Shell {
 private:
 	/* 認識するコマンドとその列挙 */
-	static constexpr int CMD_LEN = 18;
+	static constexpr int CMD_LEN = 21;
 	static const std::string CMD_LIST[CMD_LEN];
 	enum CmdEnum {  // <--> CMD_LIST
-		LIST   = 0   , LS       = 1   ,
-		LISTP  = 2   , LISTPREV = 3   ,
-		LISTN  = 4   , LISTNEXT = 5   ,
-		FIND   = 6   ,
-		SEARCH = 7   ,
-		VIEW   = 8   , 
-		EDIT   = 9   , WRITE    = 10  , 
-		REEDIT = 11  , REVISE   = 12  , 
-		REMOVE = 13  , 
-		Q      = 14  , EXIT     = 15  , 
-		H      = 16  , HELP     = 17
+		LIST      = 0   , LS       = 1   ,
+		LISTP     = 2   , LISTPREV = 3   ,
+		LISTN     = 4   , LISTNEXT = 5   ,
+		FIND      = 6   ,
+		SEARCH    = 7   ,
+		VIEW      = 8   , 
+		EDIT      = 9   , WRITE    = 10  , 
+		REEDIT    = 11  , REVISE   = 12  , 
+		REMOVE    = 13  , 
+		BACKUP    = 14  ,
+		RESTORE   = 15  ,
+		LS_BACKUP = 16  ,
+		Q         = 17  , EXIT     = 18  , 
+		H         = 19  , HELP     = 20
 	};
 
 	/* 呼び出されるのアクション管理 */
@@ -47,6 +50,9 @@ private:
 	inline void edit();
 	inline void reedit();
 	inline void remove();
+	inline void backup();
+	inline void restore();
+	inline void ls_backup();
 	inline void help();
 	/* --==--==---==--==-- */
 };
